Renaming CSS classes to improve consistency and correct visibility errors in login and registration forms

--- a/app/public/style.css
+++ b/app/public/style.css
@@ -107,7 +107,7 @@ button:hover .arrow:before {
     font-weight: bold;
 }
 
-.escondido {
+.hidden {
     display: none;
 }
 
